<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333"
    tools:context=".CalculatorFragment">

    <TextView
        android:id="@+id/questionDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#313131"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/questiondate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/dateText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:inputType="date"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/BdayDate"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionDate" />

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateText"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/dateResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#444"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateBtn"
        android:textAlignment="center"
        android:text="@string/calculatedResult"/>

</androidx.constraintlayout.widget.ConstraintLayout>