<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/linearlayoutMainPage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/calculatorBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/purple_200"
            android:gravity="top"
            android:text="@string/Calculator"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/horoscopeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/purple_200"
            android:gravity="top"
            android:text="@string/Horoscope"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/HomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/purple_200"
            android:gravity="top"
            android:text="@string/Home"
            android:textColor="#000"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>